base: SystemUI: add VPN to the icon blacklist in tuner
Change-Id: I579d1ec7a6d66ac7055cce7d7e905bae7dc5cd9a

--- a/packages/SystemUI/res/xml/statusbar_items.xml
+++ b/packages/SystemUI/res/xml/statusbar_items.xml
@@ -38,6 +38,10 @@
         android:key="ethernet"
         android:title="@string/status_bar_ethernet" />
 
+        <com.android.systemui.tuner.StatusBarSwitch
+            android:key="vpn"
+            android:title="@string/status_bar_vpn" />
+
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="headset"
         android:title="@string/headset" />
@@ -79,4 +83,5 @@
         android:title="@string/battery"
         android:summary="%s"
         android:entries="@array/battery_options" />
+
 </PreferenceScreen>
