--- a/core/res/res/values/stag_strings.xml
+++ b/core/res/res/values/stag_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2021 ArrowOS
+     Copyright (C) 2019-2022 StagOS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -26,4 +26,8 @@
     <string name="reboot_systemui_title">Reboot systemui</string>
     <string name="reboot_systemui_message">Rebooting SystemUI\u2026</string>
 
+    <!-- Button that copies the url to the log of a crashed application -->
+    <string name="aerr_copy">Copy crash log URL</string>
+    <string name="url_copy_success">URL copied successfully</string>
+    <string name="url_copy_failed">An error occured while uploading the log to dogbin</string>
 </resources>
