--- a/core/res/res/values/stag_symbols.xml
+++ b/core/res/res/values/stag_symbols.xml
@@ -41,4 +41,6 @@
     <java-symbol name="reboot_systemui_message" type="string" />
     <java-symbol type="array" name="config_rebootActionsList" />
 
+    <!-- QQS Height -->
+    <java-symbol type="dimen" name="quick_qs_total_height" />
 </resources>
