--- a/core/res/res/values/stag_symbols.xml
+++ b/core/res/res/values/stag_symbols.xml
@@ -50,10 +50,7 @@
     <java-symbol type="string" name="url_copy_failed" />
 
     <!-- Pocket Lock -->
-    <java-symbol type="layout" name="pocket_lock_view_layout" />
-    <java-symbol type="id" name="pocket_hint_container" />
-    <java-symbol type="id" name="pocket_hint_image" />
-    <java-symbol type="id" name="pocket_hint_message" />
+    <java-symbol type="layout" name="pocket_lock_view" />
 
     <!-- Pocket bridge -->
     <java-symbol type="string" name="config_pocketBridgeSysfsInpocket" />
@@ -61,4 +58,6 @@
 
     <!-- Pocket Service -->
     <java-symbol type="string" name="config_pocketJudgeVendorSensorName" />
+
+
 </resources>
