[SQUASH] SystemUI: Port brightness slider changes
includes:
- Brightness slider on footer
- Auto brightness icon
- Dropped + - buttons

Squashed commit of the following:

commit d1f762251df4af983a6c4c2c715b74cc8eab7f11
Author: SagarMakhar <sagarmakhar@gmail.com>
Date:   Sat Aug 21 13:26:11 2021 +0000

    Quick QS brightness slider [1/2]

    Change-Id: I34e3e470177f23c5deb9fd5187991d09b207576a
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit adc7fc6ebf21523a9086d21018786cb166814e7b
Author: SagarMakhar <sagarmakhar@gmail.com>
Date:   Thu Oct 8 19:49:58 2020 +0000

    Fix brightness slider position after coming from landscape to portrait

    - Fix toggle vs position behavior on first boot
    - Fix position stucked in bottom after coming from landscape

    Change-Id: I611b0643ba3b5eabd08f52f8ca3b6b6513ecda1e
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit 71ba9b41f0d92ed5814663db5da8670f0fee32bb
Author: maxwen <max.weninger@gmail.com>
Date:   Mon Nov 19 12:37:01 2018 +0000

    base: SystemUI: add tuner prefs for QS brightness buttons [1/2]

    * Add option for showing Auto brightness icon
    * Add option for showing brightness increase/decrease buttons

    * Citrus-CAF edits:
      Move options to CustomSquash

    * Squashed commits from:
      omnirom/android_frameworks_base@f26575a
      omnirom/android_frameworks_base@0c49a08
      omnirom/android_frameworks_base@0382757

    * Wight554:
      Add missing BrightnessDialog checks

    Signed-off-by: Adarsh-MR <adarshmr1998@gmail.com>
    Co-authored-by: Adarsh-MR <adarshmr1998@gmail.com>
    Signed-off-by: Vol Zhdanov <wight554@gmail.com>
    Signed-off-by: Shubham Singh <coolsks94@gmail.com>
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
    Change-Id: Ie24ebcc0fc7c0bb98411c77b29a2bd427302cdff
    Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

commit 5c6ad7a6c000ccb1449d13363d89d618ce4a7e80
Author: ezio84 <brabus84@gmail.com>
Date:   Tue Nov 20 23:51:33 2018 +0100


--- a/core/res/res/values/evolution_dimens.xml
+++ b/core/res/res/values/evolution_dimens.xml
@@ -19,4 +19,7 @@
     <!-- Total height of QQS (quick_qs_offset_height + 128) -->
     <dimen name="quick_qs_total_height">176dp</dimen>
 
+    <!-- QQS Brightness slider -->
+    <dimen name="quick_qs_brightness_margin_top">24dp</dimen>
+
 </resources>
