--- a/core/res/res/values/arrow_arrays.xml
+++ b/core/res/res/values/arrow_arrays.xml
@@ -20,6 +20,7 @@
         <item>restart</item>
         <item>reboot_recovery</item>
         <item>reboot_bootloader</item>
+        <item>reboot_systemui</item>
     </string-array>
 
 </resources>
