--- a/core/res/res/values/stag_strings.xml
+++ b/core/res/res/values/stag_strings.xml
@@ -23,5 +23,7 @@
     <string name="reboot_to_recovery_message">Rebooting to recovery\u2026</string>
     <string name="reboot_system_title">Restart system</string>
     <string name="reboot_system_message">Restarting system\u2026</string>
+    <string name="reboot_systemui_title">Reboot systemui</string>
+    <string name="reboot_systemui_message">Rebooting SystemUI\u2026</string>
 
 </resources>
