--- a/core/res/res/values/stag_symbols.xml
+++ b/core/res/res/values/stag_symbols.xml
@@ -37,6 +37,8 @@
     <java-symbol name="reboot_to_recovery_message" type="string" />
     <java-symbol name="reboot_system_title" type="string" />
     <java-symbol name="reboot_system_message" type="string" />
+    <java-symbol name="reboot_systemui_title" type="string" />
+    <java-symbol name="reboot_systemui_message" type="string" />
     <java-symbol type="array" name="config_rebootActionsList" />
 
 </resources>
