--- a/core/res/res/values/stag_dimens.xml
+++ b/core/res/res/values/stag_dimens.xml
@@ -17,6 +17,8 @@
   -->
 
 <resources>
+    <!-- Total height of QQS (quick_qs_offset_height + 128) -->
+    <dimen name="quick_qs_total_height">176dp</dimen>
 
     <!-- Pocket Mode -->
     <dimen name="pocket_view_img_height">350dp</dimen>
