--- a/packages/SystemUI/res/values/stag_dimens.xml
+++ b/packages/SystemUI/res/values/stag_dimens.xml
@@ -26,4 +26,10 @@
     <dimen name="status_bar_battery_bigcircle_icon_height">20.5dp</dimen>
      <!-- Width of the big battery circle icon in the status bar. -->
     <dimen name="status_bar_battery_bigcircle_icon_width">20.5dp</dimen>
+
+    <!-- QQS Brightness slider -->
+    <dimen name="quick_qs_brightness_margin_top">24dp</dimen>
+
+    <!-- Bottom margin size when fingerprint in display is active -->
+    <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">@dimen/keyguard_indication_margin_bottom</dimen>
 </resources>
